kubernetes/apps/default/hajimari/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hajimari
spec:
  parentRefs:
    - name: internal
      namespace: network
  hostnames:
    - "apps.${cluster_domain}"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-forwardauth
      backendRefs:
        - name: hajimari
          port: 3000
